cmake_minimum_required(VERSION 3.10)

add_library(cut_properties INTERFACE)
option(CUDA "Build with CUDA" FALSE)
if(CUDA)
    project(cut CXX CUDA)
    target_compile_definitions(cut_properties PUBLIC CUDA_SUPPORT)
    target_compile_features(cut_properties INTERFACE cxx_std_14 cuda_std_14)
else()
    project(cut CXX)
    target_compile_features(cut_properties INTERFACE cxx_std_14)
endif()

include(cmake/ClangTidy.cmake)
include(cmake/CompilerWarnings.cmake)
set_project_warnings(cut_properties)

add_library(cut STATIC src/cut_common.cpp src/cut_memory.cpp src/extrema.cpp src/extrema.cu src/sort_util.cu src/timing.cpp)
target_link_libraries(cut cut_properties)
target_include_directories(cut PUBLIC ${PROJECT_SOURCE_DIR}/include/)
set_target_properties(cut PROPERTIES CUDA_SEPARABLE_COMPILATION ON)